[metadata]
name = brain-api
version = 0.0.1
author = Jayson Stemmler
author_email = jayson@stemmler.io
description = Package for interacting with exported Microsoft Bonsai Brain containers
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/jdstemmler/bonsai-brain-container-api
project_urls =
    Bug Tracker = https://github.com/jdstemmler/bonsai-brain-container-api/issues
    repository = https://github.com/jdstemmler/bonsai-brain-container-api
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU GPLv3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src